tests/baselines/reference/moduleResolutionWithoutExtensions.errors.txt
/src/bar.mts(2,21): error TS2835: Cannot use a relative import path without an extension in an ES module when '--moduleResolution' is 'node12' or higher. Did you mean './foo.mjs'?
/src/bar.mts(3,21): error TS2834: Cannot use a relative import path without an extension in an ES module when '--moduleResolution' is 'node12' or higher.


==== /src/foo.mts (0 errors) ====
    export function foo() {
        return "";
    }
    
==== /src/bar.mts (2 errors) ====
    // Extensionless relative path ES import in an ES module
    import { foo } from "./foo"; // should error
                        ~~~~~~~
!!! error TS2835: Cannot use a relative import path without an extension in an ES module when '--moduleResolution' is 'node12' or higher. Did you mean './foo.mjs'?
    import { baz } from "./baz"; // should also error
                        ~~~~~~~
!!! error TS2834: Cannot use a relative import path without an extension in an ES module when '--moduleResolution' is 'node12' or higher.
    foo;
    baz;
    